@@ -1,5 +1,6 @@
 From version 0.6.1 to 0.6.2
 - only create extensions for generated accounts if using extension dialing.
+- can change uid setting when server is live.
 
 From version 0.6.0 to 0.6.1
 - fix for exec hook when ran on packaging systems that do not use fakeroot.
